deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: honeypot-rs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: honeypot-rs
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
